Revert "fix(picker): align all text"
This reverts commit bf0e2e43fb9ae43d4ecb5ce9a6172e8a974a4310.

--- a/components/picker/index.css
+++ b/components/picker/index.css
@@ -474,8 +474,7 @@ governing permissions and limitations under the License.
   background-color: transparent;
 
   &.spectrum-Picker--sideLabel {
-    margin-block-start: 1px;
-    /* margin-block-start: calc(-1 * var(--spectrum-picker-spacing-top-to-text-side-label-quiet)); */
+    margin-block-start: calc(-1 * var(--spectrum-picker-spacing-top-to-text-side-label-quiet));
   }
 
   .spectrum-Picker-menuIcon {
